[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui_panel_3d.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/default_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://packs/characters/Commander/assets/PLPSF-Percussion_80_01.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_game_sound_coins_collect_several_at_once_002_40813.mp3.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "move"
tracks/0/type = "value"
tracks/0/path = NodePath("Model:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 5.561 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, -5.829 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Model:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.271571, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.33192, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.4218, 0.48194, 1.17389 )

[sub_resource type="BoxShape" id=3]

[node name="Player" type="RigidBody" groups=["player"]]
mode = 2
script = ExtResource( 1 )
SPEED = 0.018

[node name="ActionView" type="Camera" parent="."]
transform = Transform( 0.779622, -0.100115, 0.618196, 0, 0.987139, 0.159864, -0.62625, -0.124634, 0.769595, 2.134, 1.93005, 1.59658 )
current = true

[node name="Build" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 60, 115, 0 )

[node name="Targetting" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 43.7238, 75.5685, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move = SubResource( 1 )

[node name="CameraBoom" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26745, 0 )

[node name="Movement" type="Camera" parent="CameraBoom"]
transform = Transform( -0.0232981, 4.36995e-08, -0.999729, -4.36995e-08, 1, 4.47298e-08, 0.999729, 4.47297e-08, -0.0232981, -5.30297, 0.809948, -0.175748 )
doppler_tracking = 2
fov = 78.7

[node name="HealthDisplay" parent="CameraBoom/Movement" instance=ExtResource( 2 )]
transform = Transform( 0.496273, -2.93099e-14, 0.0853078, 8.88178e-15, 0.3, -2.06501e-14, -0.0609342, -9.13158e-15, 0.694782, -2.531, 1.527, -2.34 )
visible = false
UI = "res://scenes/2DUI/PlayerUI/Health.tscn"
handle_input = false
resolution = Vector2( 2027, 758 )
ratio = 2

[node name="Modifers" parent="CameraBoom/Movement" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 3.72529e-09, -7.10543e-15, 1, 0, -3.72529e-09, -1.11022e-16, 1, -0.392, -0.896, -0.61 )
visible = false
UI = "res://scenes/2DUI/PlayerUI/Modifers.tscn"
handle_input = false

[node name="CP" parent="CameraBoom/Movement" instance=ExtResource( 2 )]
transform = Transform( 0.397018, 0, -0.0487476, -1.24345e-14, 0.4, 3.10862e-15, 0.0487476, -5.55112e-17, 0.397018, 2.705, 1.533, -2.34 )
visible = false
UI = "res://scenes/2DUI/PlayerUI/ControlPoints.tscn"
handle_input = false
resolution = Vector2( 238, 137 )
ratio = 2

[node name="Model" type="Position3D" parent="."]

[node name="Puzzle" type="Spatial" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4.41114, 4.96975, -6.03664 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.134078, 1.07401, 0.0301063 )
shape = SubResource( 2 )

[node name="PlayerArea" type="Area" parent="." groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.135183, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0136, 0 )
shape = SubResource( 3 )

[node name="Audio" type="Node" parent="."]

[node name="CP_Pickup" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
volume_db = -30.0
bus = "sfx"

[node name="Theme" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 0.0726813, 0, 0.997355, 0, 1, 0, -0.997355, 0, 0.0726813, 0, 0, 0 )
stream = ExtResource( 5 )
unit_db = 10.0
max_distance = 100.0
out_of_range_mode = 1
bus = "bgm"
emission_angle_enabled = true

[node name="SpeechBox" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.779622, -0.100115, 0.618196, 0, 0.987139, 0.159864, -0.62625, -0.124633, 0.769596, 1.112, 1.979, 0.302 )
visible = false
UI = "res://scenes/2DUI/PlayerUI/CrewLog.tscn"
resolution = Vector2( 1366, 768 )
ratio = 8

[node name="Commands" type="Spatial" parent="."]
transform = Transform( 0.779622, -0.100115, 0.618196, 0, 0.987139, 0.159864, -0.62625, -0.124633, 0.769596, 1.138, 1.7, -0.666 )
visible = false

[node name="Control" type="Control" parent="Commands"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Commands/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.5
margin_top = -48.541
margin_right = 110.5
margin_bottom = -22.541
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "Press B (ESC) to skip "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_shape_entered" from="." to="." method="_on_Player_body_shape_entered"]
[connection signal="loadup" from="." to="." method="_on_Player_loadup"]
[connection signal="area_shape_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_shape_entered"]
[connection signal="visibility_changed" from="Commands" to="." method="_on_Commands_visibility_changed"]
